# rssc-intract

./: .gitignore  2  3  Cargo.toml  README.md  \  build.sh  config.toml  diesel.toml  package-lock.json  package.json  prettier.config.js  shell.nix  tailwind.config.js
.github/workflows/: rust.yml
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/routes/: +layout.js
frontend/src/routes/about/: +page.svelte
migrations/2022-10-08-111553_init_db/: down.sql  up.sql
migrations/2022-10-08-124033_alter_following/: down.sql  up.sql
migrations/2022-10-12-001757_remove_salt/: down.sql  up.sql
migrations/2022-11-28-174342_friendship_ended_with_shares/: down.sql  up.sql
migrations/2022-11-28-175252_fix_feeds/: down.sql  up.sql
migrations/2022-11-29-125314_feed_id_not_null/: down.sql  up.sql
src/: admin.rs  config.rs  log.rs  main.rs
src/admin/: mod.rs  structs.rs  user.rs
src/api/: auth.rs  mod.rs  users.rs
src/database/: caption.rs  category.rs  feed.rs  follow.rs  image.rs  link.rs  media.rs  mod.rs  models.rs  post.rs  schema.rs  sessionid.rs  share.rs  subscription.rs  tag.rs  user.rs
src/logic/: auth.rs  mod.rs  settings.rs  share.rs  subscribe.rs  url.rs  user.rs  web.rs
src/web/: about.rs  assets.rs  auth.rs  errors.rs  mod.rs  my_data.rs  robots.rs  settings.rs  share.rs  subscribe.rs  user.rs
src/web/components/: delete_profile.rs  error_page.rs  footer.rs  login_page.rs  mod.rs  my_data.rs  new_share_page.rs  profile_page.rs  settings_page.rs  subscribe_page.rs
src/web/components/common/: accent_color.rs  language_picker.rs  (+1 more)
src/web/language/: english.rs  german.rs  mod.rs
src/web/user/: mod.rs  userpage.rs
tailwind/: input.css
web/: about.html.hbs  about.html.tera  base.html.tera  config.toml  login.html.hbs  login.html.tera  new_share.html.hbs  profileview.hbs  profileview.html.hbs  profileview.html.tera  settings.html.hbs
web/premades/: base.html.tera  footer.html.tera
web/static/css/: main.css
(+1 files in other folders)
