[package]
name = "rssc-intract"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["secrets", "json"]}
rocket_dyn_templates = {version = "0.1.0-rc.2", features = ["tera"]}
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
confy="0.5"
lazy_static="1"
log = "0.4"
log4rs = "1"
chrono = "0.4"
