[package]
name = "rssc-intract"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["secrets", "json"]}
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
confy="0.5"
lazy_static="1"
log = "0.4"
log4rs = "1"
chrono = "0.4"
rand = { version = "0.8", features = ["getrandom", "std_rng"] }
dialoguer = { version = "0.10", features = ["fuzzy-select", "completion", "password"] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = { version = "2", features = ["postgres"] }
derive_builder = "0.11"
rust-argon2 = "1"
thiserror = "1"
anyhow = "1"
base64 = "0.13"
url = {version = "2", features = ["serde"]}
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
sycamore = {version = "0.8", features = ["ssr"]}
accept-language = "2"
